# Meridian

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRACTS.md  EVALS.md  GUARDRAILS.md  LAUNCH.md  Makefile  OPERATIONS.md  OPTIMIZATION.md  ORCHESTRATION.md  PROMPTS.md  README.md  REGRESSION.md  SECURITY-REVIEW.md  STAGING.md  TOOLS.md  alembic.ini  docker-compose.staging.yml  docker-compose.yml  fly.toml  meridian-execution-plan.md  pyproject.toml  v2-roadmap.md
.github/workflows/: ci.yml  deploy-smoke.yml
apps/web/: .env.local.example  .gitignore  .vercelignore  auth.config.ts  auth.ts  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/admin/: page.tsx
apps/web/app/(app)/dashboard/: page.tsx
apps/web/app/(app)/documents/: page.tsx
apps/web/app/(app)/settings/: page.tsx
apps/web/app/(auth)/: actions.ts  layout.tsx
apps/web/app/(auth)/sign-in/: page.tsx
apps/web/app/(auth)/sign-up/: page.tsx
apps/web/app/api/auth/[...nextauth]/: route.ts
apps/web/app/api/chat/: route.test.ts  route.ts
apps/web/app/api/documents/: route.ts
apps/web/app/api/documents/[id]/: route.ts
apps/web/app/api/metrics/: route.ts
apps/web/app/api/sessions/: route.ts
apps/web/app/api/sessions/[id]/: route.ts
apps/web/app/api/sessions/[id]/messages/: route.ts
apps/web/app/chat/: page.tsx
apps/web/components/chat/: CitationList.tsx  InputBar.tsx  InsightPanel.tsx  MessageBubble.tsx  MessageList.tsx  PipelineIndicator.tsx  SessionSidebar.tsx
apps/web/components/documents/: UploadForm.tsx
apps/web/components/landing/: FeatureGrid.tsx  Hero.tsx  LiveMetrics.tsx  StateMachineViz.tsx
apps/web/components/shared/: Logo.tsx  Nav.tsx
apps/web/components/shell/: AppShell.tsx  SidebarLink.tsx  UserMenu.tsx
apps/web/components/ui/: Badge.tsx  Button.tsx  Card.tsx
apps/web/lib/: db.ts  documents.ts  orchestrator-server.ts  orchestrator.ts  role.test.ts  session-guard.ts  store.ts  types.ts  utils.ts  validation.ts
apps/web/scripts/: generate-types.mjs
comms/: feedback-form.md  launch-announcement.md  usage-guide.md
datasets/: adversarial_v1.yaml  classifier_v1.yaml  extraction_v1.yaml  grounded_qa_v1.yaml  pii_v1.yaml  routing_v1.yaml  tool_invocation_v1.yaml
infra/clickhouse/config.d/: keeper.xml  macros.xml  network.xml
infra/litellm/: config.yaml
infra/postgres/init/: 01-create-databases.sql
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_prompt_registry_extensions.py  0003_feature_flags.py  0004_semantic_cache.py  0005_auth_and_tenants.py  0006_request_feedback_log.py  0007_documents.py
ops/: security-review-report.md
ops/alerts/: alerts.yaml
ops/dashboards/: 01_service_health.yaml  02_model_performance.yaml  03_cost_accounting.yaml  04_eval_quality_trends.yaml  05_guardrail_activity.yaml  06_prompt_versions.yaml  07_retrieval_quality.yaml  08_user_engagement.yaml  09_provider_health.yaml  10_incident_anomaly.yaml  README.md
ops/reports/: 30_day_report.md  60_day_report.md  90_day_report.md
ops/runbooks/: _post_incident_template.md  cost-spike.md  faithfulness-drop.md  latency-spike.md  pii-leakage.md  provider-outage.md
prompts/classifier/: v1.yaml
prompts/extraction/: v1.yaml
prompts/grounded_qa/: v1.yaml
prompts/judge_faithfulness/: v1.yaml
prompts/judge_pairwise/: v1.yaml
prompts/judge_relevance/: v1.yaml
prompts/tool_invocation/: v1.yaml
scripts/: bootstrap_prompts.py  check_launch_gates.py  deploy_smoke.sh  deploy_staging.sh  export_schemas.py  fly_set_secrets.sh  go_no_go.py  load_test.py  promote_to_golden.py  red_team.py  rollout.py  shadow_replay.py  stability_monitor.py  staging_smoke.py  weekly_review.py
services/evaluator/: pyproject.toml
services/evaluator/src/meridian_evaluator/: __init__.py  cli.py  datasets.py  judges.py  online.py  regressor.py  reports.py  scorers.py  shadow.py  stub_client.py
services/evaluator/tests/: test_judges.py  test_regressor.py  test_shadow_and_online.py
services/model-gateway/: pyproject.toml
services/model-gateway/src/meridian_model_gateway/: __init__.py  circuit.py  client.py  protocols.py  resilient.py  retry.py
services/model-gateway/tests/: test_circuit.py  test_retry.py  test_retry_integration.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/src/meridian_orchestrator/: __init__.py  admin.py  api.py  app.py  audit.py  auth.py  caller.py  feedback.py  metrics.py  orchestrator.py  routing.py  sessions.py  wiring.py
services/orchestrator/tests/: conftest.py  test_api.py  test_debug_config_and_audit.py  test_distributed_limits.py  test_guardrail_integration.py  test_internal_auth.py  test_orchestrator_e2e.py  test_routing.py  test_semantic_cache_partition.py  test_tenant_isolation.py  test_tool_flow_e2e.py  test_wiring.py  test_workspace_budget_enforced.py
services/prompt-registry/: pyproject.toml
services/prompt-registry/src/meridian_prompt_registry/: __init__.py  registry.py
services/prompt-registry/tests/: conftest.py  test_registry.py
services/retrieval-client/: pyproject.toml
services/retrieval-client/src/meridian_retrieval_client/: __init__.py  http.py  mock.py  protocols.py  threshold.py
services/retrieval-client/tests/: test_http_and_threshold.py  test_mock.py
services/tool-executor/: pyproject.toml
services/tool-executor/src/meridian_tool_executor/: __init__.py  errors.py  executor.py  protocols.py  registry.py
services/tool-executor/src/meridian_tool_executor/tools/: __init__.py  jira.py  slack.py
services/tool-executor/tests/: test_executor.py  test_jira_and_slack.py
tasks/: lessons.md  todo.md  web-plan.md
