[project]
name = "meridian-evaluator"
version = "0.1.0"
description = "Offline regression suite + online sampling evaluator (Section 10)."
requires-python = ">=3.12"
dependencies = [
    "meridian-contracts",
    "meridian-prompt-registry",
    "meridian-prompt-assembler",
    "meridian-model-gateway",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_evaluator"]
