[project]
name = "meridian-model-gateway"
version = "0.1.0"
description = "Thin Python client over the LiteLLM proxy (Section 19 D1, D2)."
requires-python = ">=3.12"
dependencies = [
    "meridian-contracts",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_model_gateway"]
