[project]
name = "meridian-orchestrator"
version = "0.1.0"
description = "Core orchestration state machine (classify → retrieve → assemble → dispatch → validate → shape)."
requires-python = ">=3.12"
dependencies = [
    "meridian-contracts",
    "meridian-telemetry",
    "meridian-cost-accounting",
    "meridian-feature-flags",
    "meridian-guardrails>=0.1.0",
    "meridian-output-validator",
    "meridian-prompt-assembler",
    "meridian-prompt-registry",
    "meridian-session-store",
    "meridian-ops",
    "meridian-model-gateway",
    "meridian-retrieval-client",
    "meridian-tool-executor",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "prometheus-client>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_orchestrator"]
