[project]
name = "meridian-prompt-registry"
version = "0.1.0"
description = "Versioned, Postgres-backed prompt template registry (Section 19 D3)."
requires-python = ">=3.12"
dependencies = [
    "meridian-contracts",
    "meridian-db",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_prompt_registry"]
