[project]
name = "meridian-retrieval-client"
version = "0.1.0"
description = "Client for the external RAG pipeline (Section 4 — RAG is owned by Data Platform)."
requires-python = ">=3.12"
dependencies = [
    "meridian-contracts",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_retrieval_client"]
