[project]
name = "meridian-tool-executor"
version = "0.1.0"
description = "Schema-validated tool execution framework (Jira, Slack, internal APIs)."
requires-python = ">=3.12"
dependencies = [
    "meridian-contracts",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_tool_executor"]
